navigation from page to page enabled

--- a/artist.html
+++ b/artist.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles.css">
-  <title>Hello, world!</title>
+  <title>Artist Page</title>
 </head>
 
 <body>
@@ -23,18 +23,20 @@
     <div class="col-2 px-0 navbar-column">
       <div class="container navbar-main-container sticky-top">
         <div class="logo-container">
-          <img id="main-logo-white" class="img-fluid mt-4 mb-4" src="./mp_assets/Spotify_Logo_RGB_White.png" alt="">
-          <img id="main-logo-black" class="img-fluid mt-4 mb-4 d-none" src="./mp_assets/Spotify_Logo_CMYK_Black.png"
-            alt="">
+          <a href="homepage.html">
+            <img id="main-logo-white" class="img-fluid mt-4 mb-4" src="./mp_assets/Spotify_Logo_RGB_White.png" alt="">
+            <img id="main-logo-black" class="img-fluid mt-4 mb-4 d-none" src="./mp_assets/Spotify_Logo_CMYK_Black.png"
+              alt="">
+          </a>
         </div>
         <div class="main-links-container">
           <a class="navbar-active-link" href="#">
             <ion-icon class="icon-fill mr-3" name="home"></ion-icon> Home
           </a>
-          <a href="#">
+          <a href="searchPage.html">
             <ion-icon class="icon-outline mr-3" name="search-outline"></ion-icon> Search
           </a>
-          <a href="#">
+          <a href="artist.html">
             <ion-icon class="icon-outline mr-3" name="library-outline"></ion-icon> Library
           </a>
         </div>
@@ -98,9 +100,9 @@
                   <span>sherlockholmes</span>
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" href="#">Account</a>
-                  <a class="dropdown-item" href="#">Profile</a>
-                  <a class="dropdown-item" href="#">Log out</a>
+                  <a class="dropdown-item" href="login.html">Account</a>
+                  <a class="dropdown-item" href="login.html">Profile</a>
+                  <a class="dropdown-item" href="login.html">Log out</a>
                 </div>
               </div>
             </div>
