--- a/homepage.html
+++ b/homepage.html
@@ -30,10 +30,10 @@
             <a class="navbar-active-link" href="#">
               <ion-icon class="icon-fill mr-3" name="home"></ion-icon> Home
             </a>
-            <a href="#">
+            <a href="searchPage.html">
               <ion-icon class="icon-outline mr-3" name="search-outline"></ion-icon> Search
             </a>
-            <a href="#">
+            <a href="artist.html">
               <ion-icon class="icon-outline mr-3" name="library-outline"></ion-icon> Library
             </a>
           </div>
@@ -91,9 +91,9 @@
                   <span>sherlockholmes</span>
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" href="#">Account</a>
-                  <a class="dropdown-item" href="#">Profile</a>
-                  <a class="dropdown-item" href="#">Log out</a>
+                  <a class="dropdown-item" href="login.html">Account</a>
+                  <a class="dropdown-item" href="login.html">Profile</a>
+                  <a class="dropdown-item" href="login.html">Log out</a>
                 </div>
               </div>
             </div>
