--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
                 <label for="remember-me">Remember me</label>
             </div>
             <div id="log-in-btn-container" class="w-100">
-                <button>LOG IN</button>
+                <a href="homepage.html"><button>LOG IN</button></a>
             </div>
         </div>
         <div id="forgot-password" class="mb-4">
