--- a/album.html
+++ b/album.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
-  <title>Hello, world!</title>
+  <title>Album</title>
 </head>
 
 <body>
@@ -21,18 +21,20 @@
     <div class="col-2 navbar-column">
       <div class="container navbar-main-container sticky-top">
         <div class="logo-container">
-          <img id="main-logo-white" class="img-fluid mt-4 mb-4" src="./mp_assets/Spotify_Logo_RGB_White.png" alt="">
-          <img id="main-logo-black" class="img-fluid mt-4 mb-4 d-none" src="./mp_assets/Spotify_Logo_CMYK_Black.png"
-            alt="">
+          <a href="homepage.html">
+            <img id="main-logo-white" class="img-fluid mt-4 mb-4" src="./mp_assets/Spotify_Logo_RGB_White.png" alt="">
+            <img id="main-logo-black" class="img-fluid mt-4 mb-4 d-none" src="./mp_assets/Spotify_Logo_CMYK_Black.png"
+              alt="">
+          </a>
         </div>
         <div class="main-links-container">
           <a class="navbar-active-link" href="#">
             <ion-icon class="icon-fill mr-3" name="home"></ion-icon> Home
           </a>
-          <a href="#">
+          <a href="searchPage.html">
             <ion-icon class="icon-outline mr-3" name="search-outline"></ion-icon> Search
           </a>
-          <a href="#">
+          <a href="artist.html">
             <ion-icon class="icon-outline mr-3" name="library-outline"></ion-icon> Library
           </a>
         </div>
@@ -93,9 +95,9 @@
                 <span>sherlockholmes</span>
               </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#">Account</a>
-                <a class="dropdown-item" href="#">Profile</a>
-                <a class="dropdown-item" href="#">Log out</a>
+                <a class="dropdown-item" href="login.html">Account</a>
+                <a class="dropdown-item" href="login.html">Profile</a>
+                <a class="dropdown-item" href="login.html">Log out</a>
               </div>
             </div>
           </div>
