--- a/searchPage.html
+++ b/searchPage.html
@@ -71,7 +71,7 @@
     </div>
     <div class="col-10 px-0">
       <!-- STARTS HERE, MAIN-SEARCH-CONTAINER WRAPS ENTIRE PAGE!!! -->
-      <div class="mt-3 main-search-container">
+      <div class="mt-3 main-search-container container">
         <!-- container for top buttons and search only -->
         <div class="container-fluid top-search-container d-flex justify-content-between sticky-top">
           <div class="arrows-search-group d-flex">
@@ -439,6 +439,11 @@
       </div>
     </footer>
   </section>
+
+  <!-- ionicons -->
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <!-- ionicons -->
   <!-- Optional JavaScript; choose one of the two! -->
 
   <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
