--- a/searchPage.html
+++ b/searchPage.html
@@ -98,7 +98,7 @@
             </form>
           </div>
           <div class="dropdown-and-light-toggle-group d-flex">
-            <button class="mr-3" onclick="toggleLightMode()">
+            <button class="mr-3" onclick="toggleLightModeSearch()">
               <ion-icon id="sun-icon" class="" name="sunny-outline"></ion-icon>
               <ion-icon id="moon-icon" class="d-none" name="moon-outline"></ion-icon>
             </button>
@@ -460,6 +460,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
     -->
+  <script src="app.js"></script>
 </body>
 
 </html>
