all links work, active-link changes

--- a/artist.html
+++ b/artist.html
@@ -20,7 +20,7 @@
 
   <!-- start of marti's navbar -->
   <div class="row">
-    <div class="col-2 px-0 navbar-column">
+    <div class="col-2 navbar-column">
       <div class="container navbar-main-container sticky-top">
         <div class="logo-container">
           <a href="homepage.html">
@@ -30,13 +30,13 @@
           </a>
         </div>
         <div class="main-links-container">
-          <a class="navbar-active-link" href="#">
+          <a href="homepage.html">
             <ion-icon class="icon-fill mr-3" name="home"></ion-icon> Home
           </a>
           <a href="searchPage.html">
             <ion-icon class="icon-outline mr-3" name="search-outline"></ion-icon> Search
           </a>
-          <a href="artist.html">
+          <a class="navbar-active-link" href="artist.html">
             <ion-icon class="icon-outline mr-3" name="library-outline"></ion-icon> Library
           </a>
         </div>
