--- a/homepage.html
+++ b/homepage.html
@@ -27,7 +27,7 @@
               alt="">
           </div>
           <div class="main-links-container ">
-            <a class="navbar-active-link" href="#">
+            <a class="navbar-active-link" href="homepage.html">
               <ion-icon class="icon-fill mr-3" name="home"></ion-icon> Home
             </a>
             <a href="searchPage.html">
