--- a/searchPage.html
+++ b/searchPage.html
@@ -26,10 +26,10 @@
           </a>
         </div>
         <div class="main-links-container ">
-          <a class="navbar-active-link" href="#">
+          <a href="homepage.html">
             <ion-icon class="icon-fill mr-3" name="home"></ion-icon> Home
           </a>
-          <a href="#">
+          <a class="navbar-active-link" href="#">
             <ion-icon class="icon-outline mr-3" name="search-outline"></ion-icon> Search
           </a>
           <a href="artist.html">
