started styling the player

--- a/functional_player.html
+++ b/functional_player.html
@@ -12,8 +12,10 @@
 <body>
 
     <div id="audio-player-container">
-        <p>Audio Player</p>
+        <p>audio player</p>
         <button id="play-pause-icon"></button>
+        <span id="current-time" class="time">0:00</span>
+        <span id="duration" class="time">0:00</span>
     </div>
 
 
