--- a/functional_player.html
+++ b/functional_player.html
@@ -15,7 +15,9 @@
         <p>audio player</p>
         <button id="play-pause-icon"></button>
         <span id="current-time" class="time">0:00</span>
+        <input type="range" id="seek-slider" max="100" value="0">
         <span id="duration" class="time">0:00</span>
+        <input type="range" id="volume-slider" max="100" value="100">
     </div>
 
 
