--- a/functional_player.html
+++ b/functional_player.html
@@ -17,7 +17,9 @@
         <span id="current-time" class="time">0:00</span>
         <input type="range" id="seek-slider" max="100" value="0">
         <span id="duration" class="time">0:00</span>
+        <output id="volume-output">100</output>
         <input type="range" id="volume-slider" max="100" value="100">
+        <button id="mute-icon"></button>
     </div>
 
 
@@ -32,7 +34,7 @@
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script src="functional_player.js"></script>
+    <script type="module" src="functional_player.js"></script>
 </body>
 
 </html>
